# sendu-fp

./: .env  .env.example  .gitignore  Cargo.toml  README.md  package-lock.json  package.json  tailwind.config.js  tauri.conf.json
.github/workflows/: main.yml
src/: client.rs  main.rs
ui/: index.html  index.js  input.css  output.css
